Set up JSON configuration with colors and dimensions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,17 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(ideal-gas VERSION 0.1.0)
 
+set(CMAKE_CXX_STANDARD 17)
+# set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# set(CMAKE_CXX_EXTENSIONS OFF)
+
 set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_CXX_EXTENSIONS OFF)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-include(CTest)
-enable_testing()
+# include(CTest)
+# enable_testing()
 
 # Warning flags
 if(MSVC)
@@ -20,26 +24,6 @@ endif()
 
 include(FetchContent)
 
-# FetchContent_MakeAvailable was not added until CMake 3.14
-if(${CMAKE_VERSION} VERSION_LESS 3.14)
-    include(cmake/add_FetchContent_MakeAvailable.cmake)
-endif()
-
-# FetchContent_Declare(
-#         catch2
-#         GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-# )
-
-# # Adds Catch2 testing library
-# FetchContent_GetProperties(catch2)
-# if(NOT catch2_POPULATED)
-#     FetchContent_Populate(catch2)
-#     add_library(catch2 INTERFACE)
-#     target_include_directories(catch2 INTERFACE ${catch2_SOURCE_DIR}/single_include)
-# endif()
-
-Include(FetchContent)
-
 FetchContent_Declare(
   Catch2
   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
@@ -47,12 +31,30 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
+FetchContent_Declare(json
+  GIT_REPOSITORY https://github.com/ArthurSonzogni/nlohmann_json_cmake_fetchcontent.git
+  GIT_TAG v3.7.3)
+
+FetchContent_GetProperties(json)
+FetchContent_MakeAvailable(json)
+if(NOT json_POPULATED)
+  FetchContent_Populate(json)
+  add_subdirectory(${json_SOURCE_DIR} ${json_BINARY_DIR} EXCLUDE_FROM_ALL)
+endif()
+
+find_package( Boost 1.54 REQUIRED COMPONENTS system filesystem )
+list( APPEND CINDER_LIBS_DEPENDS ${Boost_LIBRARIES} )
+list( APPEND CINDER_INCLUDE_SYSTEM_PRIVATE ${Boost_INCLUDE_DIRS} )
+
 get_filename_component(CINDER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../" ABSOLUTE)
 get_filename_component(APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/" ABSOLUTE)
 
 include("${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake")
 
-list(APPEND CORE_SOURCE_FILES   )#src/.cpp)
+list(APPEND CORE_SOURCE_FILES   
+    src/core/particle_container.cc
+    src/core/particle.cc
+)
 
 list(APPEND VISUALIZER_SOURCE_FILES  
     src/visualizer/ideal_gas_visualizer.cc
@@ -62,25 +64,32 @@ list(APPEND VISUALIZER_SOURCE_FILES
 list(APPEND TEST_FILES      tests/test_main.cc
                             tests/test_model.cc)
 
-# add_executable(ideal-gas /Users/rustomichhaporia/GitHub/Cinder/my-projects/ideal-gas-rustom-ichhaporia/apps/main.cpp ${CORE_SOURCE_FILES})
-
 ci_make_app(
-        APP_NAME        ideal-gas-simulation
+        APP_NAME        ideal-gas-visualizer
         CINDER_PATH     ${CINDER_PATH}
-        SOURCES         apps/ideal_gas_visualizer_app.cpp ${SOURCE_FILES} ${VISUALIZER_SOURCE_FILES}
+        SOURCES         apps/ideal_gas_visualizer_app.cpp ${CORE_SOURCE_FILES} ${VISUALIZER_SOURCE_FILES}
         INCLUDES        include
+        LIBRARIES       nlohmann_json::nlohmann_json
 )
 
 ci_make_app(
         APP_NAME        ideal-gas-test
         CINDER_PATH     ${CINDER_PATH}
-        SOURCES         tests/test_main.cc ${SOURCE_FILES} ${TEST_FILES}
+        SOURCES         tests/test_main.cc ${CORE_SOURCE_FILES} ${TEST_FILES}
         INCLUDES        include
         LIBRARIES       Catch2 
 )
+# set_target_properties(ideal-gas-visualizer
+#     PROPERTIES
+#         CXX_STANDARD 17
+#         CXX_STANDARD_REQUIRED YES
+#         CXX_EXTENSIONS NO
+# )
+# add_library(ideal-gas-visualizer nlohmann_json::nlohmann_json)
 
-target_include_directories(ideal-gas-simulation PRIVATE include)
-# target_link_libraries(ideal-gas-test Catch2::Catch2)
+target_include_directories(ideal-gas-visualizer PRIVATE include)#; nlohmann_json::nlohmann_json_cmake_fetchcontent)#nlohmann_json::nlohmann_json)
+# target_link_libraries(ideal-gas-visualizer PRIVATE nlohmann_json::nlohmann_json)
+
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
