--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,9 +61,9 @@ list(APPEND VISUALIZER_SOURCE_FILES
     src/visualizer/ideal_gas_visualizer.cc
 )
 
-list(APPEND TEST_FILES      tests/test_main.cc
-                            tests/test_particle_container.cc
-                            tests/test_histogram.cc)
+list(APPEND TEST_FILES      test/test_main.cc
+                            test/test_particle_container.cc
+                            test/test_histogram.cc)
 
 ci_make_app(
         APP_NAME        ideal-gas-visualizer
@@ -76,7 +76,7 @@ ci_make_app(
 ci_make_app(
         APP_NAME        ideal-gas-test
         CINDER_PATH     ${CINDER_PATH}
-        SOURCES         tests/test_main.cc ${CORE_SOURCE_FILES} ${TEST_FILES}
+        SOURCES         test/test_main.cc ${CORE_SOURCE_FILES} ${TEST_FILES}
         INCLUDES        include
         LIBRARIES       Catch2 
 )
